# dafvalidation

./: .bzrignore  .gitignore  CMakeLists.txt  INSTALL  README  dafvalidation.deps  dafvalidation.pc.cmake  meson.build
cmake/: Makefile
data/: config.h.cmake
lib/: AbstractValidator.vala  IValidationFailure.vala  ValidationFailure.vala  ValidationResult.vala  ValidationRule.vala  meson.build
po/: CMakeLists.txt
src/: CMakeLists.txt  IValidators.vala  Severity.vala
subprojects/: dafcore  dafunit
test/: CMakeLists.txt  TestMain.vala  ValidatorTest.vala  meson.build
test/Model/: Address.vala  Gender.vala  Person.vala
